--- a/index.html
+++ b/index.html
@@ -30,8 +30,25 @@ localhost ansible_connection=local
         enabled: yes
 
 
-
+<build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>org.example.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
   </div>
+
+  
   
 </body>
 </html>
