--- a/index.html
+++ b/index.html
@@ -48,7 +48,29 @@ localhost ansible_connection=local
     </build>
   
 
-  
+  plugins {
+    id 'java'
+}
+
+group = 'com.example'
+version = '1.0-SNAPSHOT'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    testImplementation 'junit:junit:4.13.2'
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'org.example.Main'
+        )
+    }
+}
+
   
 </body>
 </html>
