--- a/index.html
+++ b/index.html
@@ -46,6 +46,23 @@ localhost ansible_connection=local
             </plugin>
         </plugins>
     </build>
+
+
+<dependencies>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.32.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.11.0</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+    
   
 
   plugins {
